examples/pos/infer/infer_boxed.effekt
def definition() = {
  val f = box { 1 };
  f
}

def callsite() =
  (definition())()

// def polymorphicError[A](a: A): Unit =
//  a()

def main() =
  println(callsite())
