examples/neg/subtract_capture_region.effekt
interface Amb { def flip(): Bool }

def ex1() =  {

  val f: () => Unit at {} = box {
    region r {
      var x in r = 1;
      // uses {io}
      println(x)
    }
  }
  f()
}

def main() = ex1()
